--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"private": true,
 	"type": "module",
 	"scripts": {
-		"dev": "vite open",
+		"dev": "vite",
 		"build": "vite build",
 		"preview": "vite preview"
 	},
