--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"deck.gl": "^9.2.5",
 		"maplibre-gl": "^5.15.0",
 		"preact": "^10.25.3"
 	},
